--- a/TeamUnderDog/app/src/main/res/layout/exercise_record_row.xml
+++ b/TeamUnderDog/app/src/main/res/layout/exercise_record_row.xml
@@ -1,46 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
     <LinearLayout
-        android:padding="10dp"
+        android:layout_width="411dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/eid"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:layout_width="wrap_content"
-
-            android:layout_height="wrap_content"/>
+        android:padding="20dp">
+        
         <TextView
             android:id="@+id/ename"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:textSize="18sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
-            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/erecord"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="0dp"
+            android:textSize="18sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/edate"
-            android:textSize="15sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="0dp"
+            android:textSize="18sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
     </LinearLayout>
 </LinearLayout>
