--- a/TeamUnderDog/app/src/main/res/layout/row.xml
+++ b/TeamUnderDog/app/src/main/res/layout/row.xml
@@ -1,40 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:padding="10dp"
-        android:orientation="horizontal"
+    <TextView
+        android:id="@+id/productid"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/productid"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/productname"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:layout_weight="2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/productname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/productquantity"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:layout_weight="2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-
-
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/productquantity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:textSize="15sp" />
 
 </LinearLayout>
