--- a/TeamUnderDog/app/src/main/res/layout/activity_exercise_add.xml
+++ b/TeamUnderDog/app/src/main/res/layout/activity_exercise_add.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ExerciseAddActivity">
+    tools:context=".exerciselist.ExerciseAddActivity">
 
     <TextView
         android:id="@+id/textView8"
