--- a/TeamUnderDog/app/src/main/res/layout/activity_exercise_list.xml
+++ b/TeamUnderDog/app/src/main/res/layout/activity_exercise_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#142196F3"
-    tools:context=".ExerciseListActivity">
+    tools:context=".exerciselist.ExerciseListActivity">
 
     <DatePicker
         android:id="@+id/datePicker"
