--- a/TeamUnderDog/app/src/main/res/layout/activity_exercise_timer.xml
+++ b/TeamUnderDog/app/src/main/res/layout/activity_exercise_timer.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:padding="20dp"
         android:text="TextView"
-        android:textAlignment="viewEnd" />
+        android:textAlignment="viewEnd"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/countNum"
