--- a/TeamUnderDog/app/src/main/res/layout/activity_sports.xml
+++ b/TeamUnderDog/app/src/main/res/layout/activity_sports.xml
@@ -142,7 +142,7 @@
             android:id="@+id/exitsrn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="나가기" />
+            android:text="루틴 추가" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
