adjust home screen

--- a/TeamUnderDog/app/src/main/res/layout/activity_exercise_timer.xml
+++ b/TeamUnderDog/app/src/main/res/layout/activity_exercise_timer.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:padding="20dp"
         android:text="TextView"
-        android:textAlignment="viewEnd" />
+        android:textAlignment="viewEnd"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/countNum"
@@ -50,10 +51,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:cursorVisible="false"
             android:paddingTop="60dp"
             android:text="00"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="30dp"
+            android:visibility="gone"
             app:layout_constraintBaseline_toBaselineOf="@+id/secTextView"
             app:layout_constraintStart_toEndOf="@+id/secTextView" />
 
