--- a/TeamUnderDog/app/src/main/res/menu/main_drawer_navigation.xml
+++ b/TeamUnderDog/app/src/main/res/menu/main_drawer_navigation.xml
@@ -9,6 +9,8 @@
     <item android:id = "@+id/CategoryRoutine"
         android:title = "운동루틴"
         />
+    <item android:id="@+id/CategoryExerciseRecord"
+        android:title="운동기록"/>
     <item android:id="@+id/CategoryPhysicalRecord"
         android:title="신체기록"/>
 </menu>
